(images) Fix margin of "find images in the same area" on mobile

--- a/astrobin/static/astrobin/scss/astrobin.scss
+++ b/astrobin/static/astrobin/scss/astrobin.scss
@@ -1087,6 +1087,10 @@ BODY:first-of-type ul.as-list, x:-moz-any-link, x:default { /* Target FF 3.5+ */
   .search-around {
     margin-top: 1rem;
 
+    @media screen and (max-width: 767px) {
+      margin-left: 12px;
+    }
+
     .btn {
       padding: 6px 10px;
     }
